--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>widget-admin</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
-  <body>
-    <widget-admin-root></widget-admin-root>
-  </body>
+<head>
+    <meta charset="utf-8"/>
+    <title>crm</title>
+    <base href="/"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <link href="favicon.ico" rel="icon" type="image/x-icon"/>
+</head>
+<body>
+<crm-root></crm-root>
+</body>
 </html>
