fix(app): recursion / links / guard / interceptor

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="favicon.ico" rel="icon" type="image/x-icon"/>
+    <link rel="stylesheet" href="https://code.jquery.com/jquery-3.7.1.min.js">
 </head>
 <body>
-<crm-root></crm-root>
+    <crm-root></crm-root>
 </body>
 </html>
