--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="favicon.ico" rel="icon" type="image/x-icon"/>
     <link rel="stylesheet" href="https://code.jquery.com/jquery-3.7.1.min.js">
+
+<!--    <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css">-->
+<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">-->
 </head>
 <body>
     <crm-root></crm-root>
