--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="light-theme.css">
+    <link rel="stylesheet" href="light-theme.css" media="(prefers-color-scheme: no-preference)">
+    <link rel="stylesheet" href="dark-theme.css" media="(prefers-color-scheme: dark)">
 </head>
 <body>
 <crm-root></crm-root>
